Swagger 95% Done
