# resources/lang/en/validation.php
@@ -145,6 +145,6 @@ return [
     |
     */
 
-    'attributes' => ['phone_number'=> 'Andi'],
+    'attributes' => [],
 
 ];
